Tue May 05 14:15:37 GMT 2015  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Ship generate-rdoc-stubs in the tarball.  Reported
	  by Matthias Klose in https://bugs.debian.org/782270

Wed Mar 04 00:28:34 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.20.

Sat Feb 14 10:45:39 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sat Jan 24 12:19:36 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Jan 07 04:00:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Don't AC_SUBST LUA_INC as we never use it.

Wed Dec 17 23:01:35 GMT 2014  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Remove comment which is no
	  longer correct since #538 was fixed 4.5 years ago.

Fri Dec 05 11:26:16 GMT 2014  Olly Betts <olly@survex.com>

	* ChangeLog,configure.ac: Fix typos reported by Veres Lajos.

Sun Nov 30 22:00:58 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add an example of specifying LUA_SO to --help output.

Sun Nov 30 21:49:48 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Rework LUA_SO checks to be clearer and to properly
	  handle LUA_SO being specified without a leading '.'.

Sun Nov 30 15:46:08 GMT 2014  James Aylett <james@tartarus.org>

	* configure.ac: use \{0,1\} instead of \? for better sed
	  portability.

Tue Jan 13 09:17:26 GMT 2015  Olly Betts <olly@survex.com>

	* lua/Makefile.am: Remove intermediate file.

Mon Nov 24 09:35:46 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Mon Nov 03 22:45:37 GMT 2014  Olly Betts <olly@survex.com>

	* php/docs/index.html: Remove text about subclassing bug with PHP 5.4
	  and later - that was fixed in 1.2.19.

Mon Nov 03 22:42:05 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* INSTALL,php/docs/index.html: In current PHP releases, dl() will only
	  look in the configured extension directory, and only accepts a
	  leafname, and dl() is disabled in most SAPIs, so update the