@@ -1,3 +1,8 @@
+Wed May 06 07:40:59 GMT 2015  Olly Betts <olly@survex.com>
+
+	* perl/util.i.in: Add workaround for Perl defining a seed() macro
+	  which breaks '#include <algorithm>' undef C++11 with GCC.
+
 Tue May 05 14:15:37 GMT 2015  Olly Betts <olly@survex.com>
 
 	* ruby/Makefile.am: Ship generate-rdoc-stubs in the tarball.  Reported
